--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body{
 /* subtitulo H2 - #primarySubtitle_h2*/
 #primarySubtitle_h2{
     color: #fff;
-    line-height:1.2
+    line-height:1.2;
 }
 /* subtitulo H2 - #secondarySubtitle_h2*/
 #secondarySubtitle_h2{
