--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,7 @@ a:visited{
 }
 
 
-@media (max-width: 650px){
+@media screen and (max-width: 750px){
     body{
         color:white;
         background:#444444;
