--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,10 @@
 * @author: Alexsandro
 *
 * Comment
-
+* Seguindo a proposta foi criado um ID para cada H2
+* o HTML suporta usar o mesmo ID para todos os H2
+* mais em Javascript teriamos problemas, pensando desta forma
+* foi criado um ID para cada H2
 */
 
 /* Estilizando body */
@@ -24,7 +27,15 @@ body{
     color: white;
 }
 /* subtitulo H2 */
-.subtitle_h2{
+#primarySubtitle_h2{
+    color: #fff;
+    line-height:1.2;
+}
+#secondarySubtitle_h2{
+    color: #fff;
+    line-height:1.2;
+}
+#tertiarySubtitle_h2{
     color: #fff;
     line-height:1.2;
 }
@@ -38,7 +49,7 @@ body{
     color: #fff;
 }
 /* subtitulo H3 - #primarySubtitle_h3*/
-.subtitle_h3{
+#primarySubtitle_h3{
     color: #fff;
     line-height:1.2;
 }
@@ -47,7 +58,7 @@ body{
     max-width: 560px;
 }
 .code{
-    font-size: 16px;
+    font-size: 18px;
 }
 .linha{
     display: inline-block;
@@ -70,7 +81,7 @@ a:visited{
 
 @media screen and (max-width: 750px){
     body{
-        color:white;
+        color:#fff;
         background:#444444;
         max-width: 450px;
        
